@@ -2,7 +2,10 @@
 -----------------
 - Fix: Prevent the OCR being initialized more than once (happened on multiprogram and
   PAT changes)
+- New: Added .rpm package generation script.
 - New: Added build/installation script for .pkg.tar.xz (Arch Linux).
+- New: Added tarball generation script.
+- New: Added Autoconf build scripts for CCExtractor to generate makefiles.
   
 
 0.85b (2017-1-26)
